Initial connect client to server

--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@mui/material": "^6.4.8",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.13",
     "prettier": "^3.5.3",
