--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_OPTIONS= tsx watch src/index.ts"
+    "test": "NODE_OPTIONS=\"--import=tsx\" jest",
+    "dev": "tsx watch src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,16 +13,23 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "morgan": "^1.10.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@mui/material": "^6.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.13",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
     "prettier": "^3.5.3",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.1",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": "22"
