--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^0.12.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "date-fns": "^4.1.0"
   },
   "devDependencies": {
     "@mui/material": "^6.4.8",
