--- a/package.json
+++ b/package.json
@@ -4,37 +4,36 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "waku dev",
+    "build": "waku build",
+    "start": "waku start"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.8",
-    "@mui/material": "^6.4.7",
-    "@mui/styled-engine-sc": "^6.4.6",
-    "@mui/x-date-pickers": "^7.27.3",
+    "@google/genai": "^0.12.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.4.0",
     "@tanstack/react-query": "^5.69.0",
     "date-fns": "^4.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "styled-components": "^6.1.15",
-    "uuid": "^11.1.0"
+    "dotenv": "^16.5.0",
+    "prettier": "^3.5.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-server-dom-webpack": "19.1.0",
+    "uuid": "^11.1.0",
+    "waku": "0.23.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "prettier": "3.5.3",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "@tailwindcss/postcss": "4.1.7",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5",
+    "postcss": "8.5.3",
+    "tailwindcss": "4.1.7",
+    "typescript": "5.8.3"
+  },
+  "engines": {
+    "node": "22"
   }
 }
