--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "anycal-server",
+  "name": "@anycal/server",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "NODE_OPTIONS=\"--import=tsx\" jest",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,11 +14,11 @@
   "dependencies": {
     "@google/genai": "^0.12.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
-    "uuid": "^11.1.0",
-    "date-fns": "^4.1.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@mui/material": "^6.4.8",
@@ -28,7 +29,6 @@
     "@types/node": "^22.13.13",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
-    "prettier": "^3.5.3",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.1",
     "tsx": "^4.19.3",
