--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@anycal/anycal",
+  "name": "anycal",
   "version": "1.0.0",
   "description": "Anycal",
   "type": "module",
@@ -8,25 +8,50 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "clean": "turbo run clean",
-    "dev": "turbo run dev",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "lint": "turbo run lint",
-    "test": "turbo run test",
-    "check-types": "turbo run check-types"
+    "dev": "tsx watch server/src/index.ts",
+    "start": "tsx server/src/index.ts"
+  },
+  "dependencies": {
+    "@google/genai": "^0.12.0",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "morgan": "^1.10.0",
+    "tsx": "^4.20.3"
   },
   "devDependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@eslint/js": "^9.21.0",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.7",
+    "@mui/styled-engine-sc": "^6.4.6",
+    "@mui/x-date-pickers": "^7.27.3",
+    "@tanstack/react-query": "^5.69.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^24.0.1",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "date-fns": "^4.1.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
     "prettier": "^3.5.3",
-    "turbo": "^2.5.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.15",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.24.1",
+    "uuid": "^11.1.0",
+    "vite": "^6.3.5"
   },
-  "workspaces": [
-    "server",
-    "web",
-    "types"
-  ],
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
