--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.6",
     "@mui/x-date-pickers": "^7.27.3",
+    "@swc/core": "^1.12.1",
     "@tanstack/react-query": "^5.69.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.3",
