--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=3000
 NODE_ENV=development
 
 # See https://aistudio.google.com/app/apikey
-GOOGLE_GEN_AI_API_KEY=AIzaSyDjr6DEE5UKlnAF0VxGK7nu0G7hcJLWKW4
+GOOGLE_GEN_AI_API_KEY=
