--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
+    "superjson": "^2.2.2",
     "tsx": "^4.20.3"
   },
   "devDependencies": {
