--- a/package.json
+++ b/package.json
@@ -8,18 +8,15 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "tsx watch server/src/index.ts",
-    "start": "tsx server/src/index.ts"
+    "dev": "rsf-zero dev",
+    "build": "rsf-zero build",
+    "start": "rsf-zero start"
   },
   "dependencies": {
     "@google/genai": "^0.12.0",
-    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "morgan": "^1.10.0",
-    "superjson": "^2.2.2",
-    "tsx": "^4.20.3"
+    "rsf-zero": "^0.1.5"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
@@ -29,15 +26,9 @@
     "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.6",
     "@mui/x-date-pickers": "^7.27.3",
-    "@swc/core": "^1.12.1",
     "@tanstack/react-query": "^5.69.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.3",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^24.0.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
     "date-fns": "^4.1.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -47,10 +38,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.15",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.24.1",
-    "uuid": "^11.1.0",
-    "vite": "^6.3.5"
+    "typescript": "^5.9.2",
+    "uuid": "^11.1.0"
   },
   "engines": {
     "node": ">=22"
