--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@google/genai": "^0.12.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
-    "rsf-zero": "^0.1.5"
+    "rsf-zero": "^0.1.6"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
@@ -27,9 +27,10 @@
     "@mui/styled-engine-sc": "^6.4.6",
     "@mui/x-date-pickers": "^7.27.3",
     "@tanstack/react-query": "^5.69.0",
+    "@tsconfig/vite-react": "^7.0.0",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "date-fns": "^4.1.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
