--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@google/genai": "^0.12.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
-    "rsf-zero": "^0.2.1"
+    "rsf-zero": "^0.2.1",
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
