--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
-    "rsf-zero": "^0.2.1",
+    "rsf-zero": "^0.3.0",
     "superjson": "^2.2.2"
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "@mui/x-date-pickers": "^7.27.3",
     "@tanstack/react-query": "^5.69.0",
     "@tsconfig/vite-react": "^7.0.0",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -45,7 +46,7 @@
     "uuid": "^11.1.0"
   },
   "engines": {
-    "node": ">=22"
+    "node": ">=22.18"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
