--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
-    "rsf-zero": "^0.3.0",
+    "ics": "^3.8.1",
+    "rsf-zero": "^0.3.1",
     "superjson": "^2.2.2"
   },
   "devDependencies": {
