--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
-    "ics": "^3.8.1",
     "rsf-zero": "^0.3.1",
-    "superjson": "^2.2.2"
+    "superjson": "^2.2.2",
+    "ts-ics": "^2.4.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
