--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ github.actor }}
+          username: igornadj
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker image
