--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,11 +30,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          annotations: ${{ steps.meta.outputs.annotations }}
+          tags: latest
 
-      - name: Build Docker image
-        run: docker build -t ${{ github.repository }}:latest .
 
-      - name: Push Docker image
-        run: docker push ${{ github.repository }}:latest
