--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ vars.DOCKER_USERNAME }}/anycal
+          images: igornadj/anycal
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
