--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: igornadj/anycal
+          images: ${{ github.repository }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
