--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,17 @@
-name: Build
+name: Build and Push
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Extract Docker image metadata
-        id: meta
-        uses: docker/metadata-action@v5
+      - name: Build and Push
+        uses: IgorNadj/github-actions/build-and-push@main
         with:
-          images: ${{ github.repository }}
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: igornadj
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          annotations: ${{ steps.meta.outputs.annotations }}
-
+          dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
