--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy
-        uses: IgorNadj/github-actions@main
+        uses: IgorNadj/github-actions/deploy@main
         with:
           ssh-private-key: ${{ secrets.DEV_SERVER_SSH_KEY }}
