--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Dev Server
 
 on:
   workflow_run:
-    workflows: ["build-and-push"]
+    workflows: ["build"]
     types:
       - completed
     branches:
