Add persistent volume

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ NODE_ENV=development
 
 # See https://aistudio.google.com/app/apikey
 GOOGLE_GEN_AI_API_KEY=
+
+# DB_PATH: set for local dev, leave blank for default location /home/db/db.sqlite3
+DB_PATH=
