--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "react-router": "^7.9.4",
     "rsf-zero": "^0.3.1",
     "superjson": "^2.2.2",
     "ts-ics": "^2.4.0"
