--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development rsf-zero dev",
+    "dev": "NODE_ENV=development NODE_DEBUG=anycal rsf-zero dev",
     "build": "rsf-zero build",
     "start": "rsf-zero start"
   },
