--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development NODE_DEBUG=anycal:* rsf-zero dev",
+    "dev": "NODE_ENV=development NODE_DEBUG=anycal:*,rsf-zero rsf-zero dev",
     "build": "rsf-zero build",
     "start": "rsf-zero start"
   },
@@ -19,7 +19,7 @@
     "dotenv": "^16.5.0",
     "lowdb": "IgorNadj/lowdb#main",
     "react-router": "^7.9.4",
-    "rsf-zero": "^0.3.2",
+    "rsf-zero": "^0.3.5",
     "superjson": "^2.2.2",
     "ts-ics": "^2.4.0"
   },
