--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development NODE_DEBUG=anycal:*,rsf-zero rsf-zero dev",
+    "dev": "NODE_ENV=development NODE_DEBUG=anycal* rsf-zero dev",
     "build": "rsf-zero build",
     "start": "rsf-zero start"
   },
   "dependencies": {
     "@google/genai": "^0.12.0",
+    "@sentry/node": "^10.27.0",
     "@tanstack/react-query-devtools": "^5.90.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "lowdb": "IgorNadj/lowdb#main",
     "react-router": "^7.9.4",
-    "rsf-zero": "^0.3.5",
+    "rsf-zero": "^0.3.6",
     "superjson": "^2.2.2",
     "ts-ics": "^2.4.0"
   },
