--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google/genai": "^0.12.0",
     "@sentry/node": "^10.27.0",
+    "@sentry/react": "^10.27.0",
     "@tanstack/react-query-devtools": "^5.90.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
